--- a/AtividadeCorreios/AtividadeCorreios/AtividadeCorreios.csproj
+++ b/AtividadeCorreios/AtividadeCorreios/AtividadeCorreios.csproj
@@ -76,6 +76,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\styles.css" />
+    <Content Include="imagens\goran.jpg" />
     <Content Include="index.html" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
